Fix tab width cutting off tab names

--- a/src/web/css/editor.css
+++ b/src/web/css/editor.css
@@ -2190,6 +2190,7 @@ li#files-tabs-container {
 ul#files-tabs {
   display: flex;
   top: unset;
+  width: 100%;
   height: 100%;
   flex-direction: row;
   align-items: center;
